syntax = "proto3";

package pb;

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message AuthStatusRequest {
    string refresh_token = 1;
}

message AuthStatusResponse {
    bool is_authenticated = 1;
    string error = 2;
}